[package]
name = "hello-rust"
version = "0.1.0"
authors = ["fox0 <>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
dns-parser = "0.8.0"


resolve = "0.2.0"

reqwest = { version = "0.10.6", features = ["rustls-tls", "json"] }
rustls = "0.17.0"
webpki = "*"
webpki-roots = "*"
